--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,27 @@
 {
   "hosting": {
-    "public": "public",
+    "target" : "duck-test",
+    "public": "ducktest/",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+     "headers": [
+      {
+        "source": "**/*.@(js|css|html)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
+    ]
+  },
+   "hosting": {
+    "target" : "accordion-master",
+    "public": "accordion-master/",
     "ignore": [
       "firebase.json",
       "**/.*",
