--- a/.firebaserc
+++ b/.firebaserc
@@ -5,7 +5,7 @@
   "targets": {
     "ducktest-89989": {
       "hosting": {
-        "ducktest": [
+        "duck_test": [
           "ducktest-89989"
         ],
         "accordion-master": [
